# github-trending

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.example.yml  docker-compose.yml
.github/workflows/: build.yaml  docker-image.yml
src/: config.rs  main.rs  openai.rs  repo.rs
src/platform/: mod.rs  types.rs  zsxq.rs
