[package]
name = "go-trending"
version = "0.1.0"
authors = ["K8sCat <k8scat@gmail.com>"]
edition = "2018"
repository = "https://github.com/k8scat/go-trending"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.66"
bytes = "1.4.0"
env_logger = "0.11.5"
log = "0.4.17"
once_cell = "1.16.0"
openssl = { version = "0.10.55", features = ["vendored"] }
random-string = "1.0.0"
redis = { version = "0.22.1", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.7", features = [
    "rustls-tls", "json"
], default-features = false }
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-retry = "0.5"
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
time = { version = "0.3.36", features = ["formatting", "macros"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "time", "macros"] }
toml = "0.8.19"
unicode-segmentation = "1.10.1"
url = { version = "2.3.1", features = ["serde"] }
serde_json = "1.0"
async-trait = "0.1.81"
